# xiaohuixiangqi

./: .gitignore  CMakeLists.txt  README.md
src/: board.cpp  board.h  gamestartdialog.cpp  gamestartdialog.h  gamestartdialog.ui  mainwindow.cpp  mainwindow.h  player.cpp  player.h  record.cpp  settingsdialog.cpp
